--- a/scss/style.css
+++ b/scss/style.css
@@ -384,7 +384,7 @@ main div p {
   padding-right: 10px;
 }
 .mainCarrito .carrito .divCarrito .remove-btn {
-  padding: 5px;
+  padding: 5px 8px 5px 8px;
   background-color: black;
   color: white;
   outline: none;
@@ -393,6 +393,17 @@ main div p {
   cursor: pointer;
   font-weight: bolder;
   font-size: 0.7rem;
+}
+.mainCarrito .pagar {
+  padding: 5px 8px 5px 8px;
+  background-color: black;
+  color: white;
+  outline: none;
+  border: solid 0px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bolder;
+  font-size: 1rem;
 }
 
 @media all and (min-width: 700px) {
