--- a/scss/style.scss
+++ b/scss/style.scss
@@ -429,6 +429,22 @@ main{
         font-weight: bolder;
         font-size: 1rem;
     }
+    .pokemonRegalo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .contendorPokemon{
+        div{
+            .card{
+                .card-body{
+                    .card-text{
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media all and (min-width: 700px){
