--- a/scss/style.css
+++ b/scss/style.css
@@ -26,6 +26,7 @@ body {
   display: flex;
   justify-content: center;
   padding-left: 10px;
+  z-index: 4;
 }
 .navbar ul {
   display: grid;
@@ -109,7 +110,6 @@ body {
   height: 5rem;
   width: 100;
   box-shadow: 0px 17px 52px 3px #F2F1F0;
-  margin-bottom: 20px;
 }
 .header .icono {
   display: flex;
@@ -145,29 +145,52 @@ body {
   height: 20rem;
 }
 
-main {
-  color: #0D0D0D;
-}
-main div h2 {
+.mainIndex {
   display: flex;
-  justify-content: center;
-  padding-left: 10px;
-  padding-top: 20px;
-  padding-right: 10px;
+  flex-direction: column;
+  align-items: center;
 }
-main div p {
-  padding-left: 10px;
-  padding-right: 10px;
+.mainIndex #titulo {
+  margin-top: 2rem;
+}
+.mainIndex .contenidoIndex {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 2rem;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.mainIndex .contenidoIndex .descripcion {
+  text-align: center;
+}
+.mainIndex .imagenesIndex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.mainIndex .boton {
+  margin-top: 10px;
+  background-color: #0D0D0D;
+  color: #F2F1F0;
+  padding: 10px;
+  border: solid 0px;
+  border-radius: 10px;
+  text-decoration: none;
 }
 
 @media all and (min-width: 700px) {
-  main div p {
+  .mainIndex .contenidoIndex .descripcion {
     padding-left: 100px;
     padding-right: 100px;
   }
 }
 .relleno {
-  height: 80px;
+  height: 100px;
 }
 
 .tapa {
@@ -406,12 +429,20 @@ main div p {
   font-size: 1rem;
 }
 .mainCarrito .pokemonRegalo {
+  margin-top: 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .mainCarrito .contendorPokemon div .card .card-body .card-text {
   font-weight: bold;
+}
+
+.divCarritoVacio {
+  text-align: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 @media all and (min-width: 700px) {
@@ -422,4 +453,78 @@ main div p {
     width: 150px;
     margin-left: -5px;
   }
+}
+.mainContacto {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.mainContacto h2 {
+  margin-top: 2rem;
+  text-decoration: underline;
+}
+.mainContacto .contenedorContactos {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 5rem;
+}
+.mainContacto .contenedorContactos .telefonos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.mainContacto .contenedorContactos .correo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media all and (max-width: 700px) {
+  .mainContacto .contenedorContactos {
+    flex-direction: column;
+  }
+}
+.mainContacto h4 {
+  margin-top: 5rem;
+}
+.mainContacto .contenedorRedes {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.mainContacto .contenedorRedes .aRedes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: #0D0D0D;
+}
+.mainContacto .ubicacion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.mainContacto .ubicacion h4 {
+  text-align: center;
+}
+.mainContacto .ubicacion .mapa {
+  margin-top: 2rem;
+  border: solid 0px;
+  border-radius: 5px;
+}
+@media all and (max-width: 700px) {
+  .mainContacto .ubicacion .mapa {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+.rellenoContacto {
+  height: 150px;
 }/*# sourceMappingURL=style.css.map */
